--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "webpack-cli": "3.3.11"
   },
   "dependencies": {
+    "fn-machine": "0.0.13",
     "howler": "2.2.0",
     "rot-js": "2.1.2"
   }
